overflow fixed

--- a/src/app/css/index.css
+++ b/src/app/css/index.css
@@ -5,7 +5,6 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow: visible;
 }
 
 #root {
